--- a/view/style.css
+++ b/view/style.css
@@ -4,6 +4,18 @@
   margin-top: 25px;
 }
 
+/* header */
+@media only screen and (max-width: 600px) {
+  .header-userName {
+    overflow: hidden;
+    white-space: nowrap;
+    width: fit-content;
+    max-width: 90px;
+    text-overflow: ellipsis;
+    text-align: justify;
+  }
+}
+
 /* HOME PAGE */
 .homeSectionHi {
   display: flex;
@@ -61,6 +73,11 @@
 }
 
 /* BLOG PAGE */
+.blogpage {
+  width: 100%;
+  height: fit-content;
+  padding-bottom: 100px;
+}
 
 .blogpage-title {
   margin-top: 25px;
@@ -481,10 +498,9 @@
   width: fit-content;
 }
 
-.modifyArticle-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.modifyArticle-btn-delete button{
+  width: fit-content;
+  margin-top: 20px;
 }
 
 .modifyArticle-page textarea {
@@ -503,6 +519,10 @@
   }
 
   .modifyArticle-form button {
+    width: 100%;
+  }
+
+  .modifyArticle-btn-delete button{
     width: 100%;
   }
 }
@@ -602,7 +622,7 @@
 }
 
 /* admin comment page */
-.adminCommentPage{
+.adminCommentPage {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -612,7 +632,7 @@
   gap: 50px;
 }
 
-.adminCommentPage p{
+.adminCommentPage p {
   padding-left: 15px;
   padding-top: 15px;
 }
@@ -623,38 +643,61 @@
   padding-bottom: 15px;
 }
 
-.adminCommentPage form label{
+.adminCommentPage form label {
   padding-bottom: 15px;
 }
 
-.adminCommentPage-comment{
+.adminCommentPage-comment {
   border: 2px solid black;
   width: 100%;
   height: fit-content;
 }
 
-.adminCommentPage-comment-author{
+.adminCommentPage-comment-author {
   border-bottom: 2px solid black;
   width: 100%;
 }
 
-.adminCommentPage-comment-content{
+.adminCommentPage-comment-content {
   border-bottom: 2px solid black;
   width: 100%;
 }
 
 /* create article page */
 
-.createArticlePage{
+.createArticlePage {
   margin-top: 50px;
   margin-bottom: 50px;
 }
 /* tablette */
-@media only screen and (min-width: 600px) and (max-width: 1299px){
-
+@media only screen and (min-width: 600px) and (max-width: 1299px) {
 }
 
 /* mobile */
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 600px) {
+}
 
+/* delete article page */
+.deletearticlePage-bottom {
+  width: 100%;
+  height: fit-content;
+  border-top: 2px solid black;
+  padding-top: 20px;
+}
+
+.deletearticlePage-bottom p {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.deletearticlePage-btnSection {
+  display: flex;
+  gap: 15px;
+}
+
+/* mobile */
+@media only screen and (max-width: 600px) {
+  .deletearticlePage-bottom p {
+    font-size: 16px;
+  }
 }
