--- a/view/style.css
+++ b/view/style.css
@@ -323,6 +323,8 @@
   text-align: justify;
   margin-bottom: 50px;
   font-size: 24px;
+  text-align: justify;
+  overflow-wrap: break-word;
 }
 
 .comment-writer {
