added css for error page

--- a/view/style.css
+++ b/view/style.css
@@ -270,6 +270,17 @@
   }
 }
 
+/* error page */
+
+.errorPage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 50vh;
+}
+
 /* post page */
 
 .blogpost {
